--- a/ansible-weblogic12c/linux/roles/linux-jdk/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/linux-jdk/tasks/main.yml
@@ -14,8 +14,14 @@
 - name: Change ownership of jdk folder
   file: path="{{ jdk_folder }}" owner={{ oracle_user }} group={{ oracle_group }} recurse=yes
 
-- name: Change entropy device for java
-  command: "sed -i.bak 's/\\/dev\\/random/\\/dev\\/.\\/urandom/' {{ jdk_folder }}/jre/lib/security/java.security"
+#####- name: Change entropy device for java
+#####  command: "sed -i.bak 's/\\/dev\\/random/\\/dev\\/.\\/urandom/' {{ jdk_folder }}/jre/lib/security/java.security"
+
+- name: Change random device for java
+  lineinfile:
+    dest: "{{ jdk_folder }}/jre/lib/security/java.security"
+    regexp: "securerandom.source=file:/dev/./random" 
+    line: "securerandom.source=file:/dev/./urandom" 
 
 - name: Add JAVA_HOME environment variariables in bashrc
   lineinfile: dest='/home/{{ oracle_user }}/.bashrc' line='export JAVA_HOME={{ jdk_folder }}'
