När man stoppar managed server via script och startar om den via nodemanager så går det inte att få igång nodemanager igen efter att man kört: systemctl stop nodemanager. Det samma gäller om man startat admin server via nodemanager. Dvs det blir admin server som går igång

--- a/ansible-weblogic12c/linux/roles/create-managed-server/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/create-managed-server/tasks/main.yml
@@ -36,9 +36,9 @@
 #####  async: 1000
 #####  poll: 0
 
-- pause:
-    prompt: "Wait for Admin Server to go down ... Verify from terminal window"
-
+#####- pause:
+#####    prompt: "Wait for Admin Server to go down ... Verify from terminal window"
+#####
 - name: Wait for Admin Server to startup 
   wait_for: host={{ admin_server_hostname }} port={{ admin_server_port }} delay=5 timeout=90
 
@@ -55,14 +55,14 @@
 - name: Execute create GenBootStartupProps script
   shell: '{{middleware_common_home }}/common/bin/wlst.sh {{ mw_installer_folder }}/create-genboot.py'
 
-- name: Stop Managed Server from script
-  shell: "{{ oracle_base }}/config/Domains/{{ domain_name }}/bin/stopManagedWebLogic.sh"
-
-- name: Start Managed Server
-  shell: "{{ middleware_common_home }}/common/bin/wlst.sh {{ mw_installer_folder }}/start-managed-server.py"
-  async: 1000
-  poll: 0
-
-- name: Wait for Managed Server to startup 
-  wait_for: host={{ managed_server_hostname }} port={{ managed_server_port }} delay=5 timeout=90
-
+#####- name: Stop Managed Server from script
+#####  shell: "{{ oracle_base }}/config/Domains/{{ domain_name }}/bin/stopManagedWebLogic.sh"
+#####
+#####- name: Start Managed Server
+#####  shell: "{{ middleware_common_home }}/common/bin/wlst.sh {{ mw_installer_folder }}/start-managed-server.py"
+#####  async: 1000
+#####  poll: 0
+#####
+#####- name: Wait for Managed Server to startup 
+#####  wait_for: host={{ managed_server_hostname }} port={{ managed_server_port }} delay=5 timeout=90
+#####
