--- a/ansible-weblogic12c/linux/roles/linux-jdk/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/linux-jdk/tasks/main.yml
@@ -6,13 +6,22 @@
   args:
     force: no
 
+#####- name: Extract JDK archive
+#####  command: 'tar -xf {{ software_directory }}/{{ jdk_installation_archive }} -C {{ oracle_base }}'
+#####  args:
+#####    creates: "{{ jdk_folder }}"
+#####
+- name: Create jdk folder
+  file: path="{{ jdk_folder }}" owner={{ oracle_user }} group={{ oracle_group }} state=directory recurse=yes
+
 - name: Extract JDK archive
-  command: 'tar -xf {{ software_directory }}/{{ jdk_installation_archive }} -C {{ oracle_base }}'
-  args:
-    creates: "{{ jdk_folder }}"
+  unarchive:
+    src: "{{ software_directory }}/{{ jdk_installation_archive }}" 
+    dest: "{{ oracle_base }}"
+    remote_src: yes
 
 - name: Change ownership of jdk folder
-  file: path="{{ jdk_folder }}" owner={{ oracle_user }} group={{ oracle_group }} recurse=yes
+  file: path="{{ jdk_folder }}" owner={{ oracle_user }} group={{ oracle_group }} state=directory recurse=yes
 
 #####- name: Change entropy device for java
 #####  command: "sed -i.bak 's/\\/dev\\/random/\\/dev\\/.\\/urandom/' {{ jdk_folder }}/jre/lib/security/java.security"
@@ -20,8 +29,8 @@
 - name: Change random device for java
   lineinfile:
     dest: "{{ jdk_folder }}/jre/lib/security/java.security"
-    regexp: "securerandom.source=file:/dev/./random" 
-    line: "securerandom.source=file:/dev/./urandom" 
+    regexp: "securerandom.source=file:/dev/random" 
+    line: "securerandom.source=file:/dev/urandom" 
 
 - name: Add JAVA_HOME environment variariables in bashrc
   lineinfile: dest='/home/{{ oracle_user }}/.bashrc' line='export JAVA_HOME={{ jdk_folder }}'
