--- a/ansible-weblogic12c/linux/roles/start-admin-server/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/start-admin-server/tasks/main.yml
@@ -6,11 +6,11 @@
   tags:
     - start-admin-server
 
-- name: Create boot.properties file
-  template: src=boot.properties dest={{ domains_home }}/{{ domain_name }}/servers/{{ admin_server_name }}/security/ owner={{ oracle_user }} group={{ oracle_group }}
-  tags:
-    - start-admin-server
-
+##########- name: Create boot.properties file
+##########  template: src=boot.properties dest={{ domains_home }}/{{ domain_name }}/servers/{{ admin_server_name }}/security/ owner={{ oracle_user }} group={{ oracle_group }}
+##########  tags:
+##########    - start-admin-server
+##########
 - name: Copy Admin Server start-up script
   template: src=start-admin-server.py dest={{ mw_installer_folder }} owner={{ oracle_user }} group={{ oracle_group }} mode=0755
   tags:
