--- a/ansible-weblogic12c/linux/infra-vars.yml
+++ b/ansible-weblogic12c/linux/infra-vars.yml
@@ -15,21 +15,19 @@ mw_installer: 'fmw_12.2.1.2.0_wls.jar'
 domain_name: 'custom_domain'
 
 # Nodemanager and server settings
-#node_manager_address: '192.168.56.14'
-node_manager_address: '127.0.0.1'
-# Nedastående används ej
-node_manager_hostname: '192.168.56.14'
+node_manager_address: '192.168.56.14'
+node_manager_hostname: 'wls12c-r2-1.private'
 node_manager_port: '5556'
 # Pga problem med SSL så ändrade jag till "plain".
 node_manager_type: 'plain'
 #
 admin_server_address: '192.168.56.14'
-admin_server_hostname: '192.168.56.14'
+admin_server_hostname: 'wls12c-r2-1.private'
 admin_server_name: 'AdminServer'
 admin_server_port: '7001'
 #
 managed_server_hostname: '192.168.56.14'
-managed_server_address: '192.168.56.14'
+managed_server_address: 'wls12c-r2-1.private'
 managed_server_name: 'managed_1'
 managed_server_port: '8001'
 #
