--- a/ansible-weblogic12c/linux/roles/setup-nodemanager/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/setup-nodemanager/tasks/main.yml
@@ -15,24 +15,30 @@
 #####    - start-nodemanager
 #####
 
-- name: Change the ListenAddress to be in line whith our configuration.
+- name: Change the ListenAddress
   lineinfile:
     dest: "{{ domain_home }}/nodemanager/nodemanager.properties"
     regexp: "^ListenAddress="
     line: "ListenAddress={{ node_manager_hostname }}"
 
-- name: Change the ListenPort to be in line whith our configuration.
+- name: Change the ListenPort
   lineinfile:
     dest: "{{ domain_home }}/nodemanager/nodemanager.properties"
     regexp: "^ListenPort="
     line: "ListenPort={{ node_manager_port }}"
 
-- name: Change the NMType to be in line whith our configuration.
+- name: Change the NMType
   lineinfile:
     dest: "{{ domain_home }}/nodemanager/nodemanager.properties"
     regexp: "^ListenPort="
     insertafter: "^ListenPort="
     line: "NMType={{ node_manager_type }}"
+
+- name: Change the SecureListener
+  lineinfile:
+    dest: "{{ domain_home }}/nodemanager/nodemanager.properties"
+    regexp: "^SecureListener="
+    line: "SecureListener=false"
 
 - name: Fetch files
   fetch:
